* lisp/isearch.el (isearch-mode-map): Bind `M-s _' to `isearch-toggle-symbol'. Bind `M-s c' to `isearch-toggle-case-fold'. (search-map): Bind `M-s _' to `isearch-forward-symbol'. (isearch-forward): Add `M-s _' to the docstring. (isearch-forward-symbol, isearch-toggle-case-fold) (isearch-symbol-regexp): New functions.

--- a/etc/NEWS
+++ b/etc/NEWS
@@ -81,6 +81,12 @@ Use "coding: raw-text" instead.
 
 * Editing Changes in Emacs 24.2
 
+** Search changes
+
+*** Global `M-s _' starts a symbol (identifier) incremental search,
+and `M-s _' in Isearch toggles symbol search mode.
+`M-s c' in Isearch toggles search case-sensitivity.
+
 ** M-x move-to-column, if called interactively with no prefix arg, now
 prompts for a column number.
 
