Fix bug #11405 with MSVC build of emacsclientw.
 lib-src/makefile.w32-in ($(BLD)/emacsclientw.exe): Use $(MWINDOWS)
 instead of a literal -mwindows, which is not supported by MSVC.
 nt/nmake.defs (MWINDOWS): Define as "-subsystem:windows -entry:mainCRTStartup".
 Suggested by Fabrice Popineau <fabrice.popineau@supelec.fr>.
 nt/gmake.defs (MWINDOWS): Define as "-mwindows".

--- a/lib-src/ChangeLog
+++ b/lib-src/ChangeLog
@@ -1,3 +1,9 @@
+2012-05-29  Eli Zaretskii  <eliz@gnu.org>
+
+	* makefile.w32-in ($(BLD)/emacsclientw.exe): Use $(MWINDOWS)
+	instead of a literal -mwindows, which is not supported by MSVC.
+	(Bug#11405)
+
 2012-05-02  Juanma Barranquero  <lekktu@gmail.com>
 
 	* emacsclient.c (min): Undef before redefining it.
