--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,7 @@
+2012-05-30  Paul Eggert  <eggert@cs.ucla.edu>
+
+	* alloc.c, lisp.h (make_pure_vector): Now static.
+
 2012-05-30  Stefan Monnier  <monnier@iro.umontreal.ca>
 
 	* eval.c (Fdefun, Fdefmacro, Vmacro_declaration_function):
