--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,9 @@
+2012-05-30  Chong Yidong  <cyd@gnu.org>
+
+	* keymap.c (describe_map_tree): Revert 2011-07-07 change (Bug#1169).
+
+	* doc.c (Fsubstitute_command_keys): Doc fix.
+
 2012-05-29  Eli Zaretskii  <eliz@gnu.org>
 
 	* search.c (search_buffer): Remove calls to
