--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,8 @@
+2012-05-30  Jim Meyering  <meyering@redhat.com>
+
+	* callproc.c (Fcall_process_region): Include directory component
+	in mkstemp error message (Bug#11586).
+
 2012-05-30  Paul Eggert  <eggert@cs.ucla.edu>
 
 	* alloc.c, lisp.h (make_pure_vector): Now static.
