--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,9 +1,24 @@
+2012-05-31  Stefan Monnier  <monnier@iro.umontreal.ca>
+
+	Add `declare' for `defun'.  Align `defmacro's with it.
+	* emacs-lisp/easy-mmode.el (define-minor-mode)
+	(define-globalized-minor-mode): Don't autoload the var definitions.
+	* emacs-lisp/byte-run.el: Use lexical-binding.
+	(defun-declarations-alist, macro-declarations-alist): New vars.
+	(defmacro, defun): Use them.
+	(make-obsolete, define-obsolete-function-alias)
+	(make-obsolete-variable, define-obsolete-variable-alias):
+	Use `declare'.
+	(macro-declaration-function): Mark obsolete.
+	* emacs-lisp/autoload.el: Use lexical-binding.
+	(make-autoload): Add `expansion' arg.  Rely more on macro expansion.
+
 2012-05-30  Agustín Martín Domingo  <agustin.martin@hispalinux.es>
 
 	* textmodes/ispell.el (ispell-with-no-warnings):
 	Define as a macro.
-	(ispell-kill-ispell, ispell-change-dictionary): Use
-	`called-interactively-p' for Emacs instead of obsolete
+	(ispell-kill-ispell, ispell-change-dictionary):
+	Use `called-interactively-p' for Emacs instead of obsolete
 	`interactive-p'.
 
 2012-05-30  Stefan Monnier  <monnier@iro.umontreal.ca>
