Remove obsolete '#define static' cruft.
* etc/PROBLEMS: Remove obsolete '#define static' cruft.
* lwlib/xlwmenu.c [emacs]: Include "bitmaps/gray.xbm".
(gray_bitmap_width, gray_bitmap_height, gray_bitmap_bits) [!emacs]:
Remove; all uses replaced with definiens.
* src/s/hpux10-20.h (_FILE_OFFSET_BITS): Don't #undef.
This #undef was "temporary" in 2000; it is no longer needed
now that '#define static' has gone away.
* src/xfns.c, src/xterm.h (gray_bitmap_width, gray_bitmap_height)
(gray_bitmap_bits): Remove; no longer needed.
All uses replaced with definiens.
* src/xterm.c: Include "bitmaps/gray.xbm".

--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,14 @@
+2012-05-31  Paul Eggert  <eggert@cs.ucla.edu>
+
+	Remove obsolete '#define static' cruft.
+	* s/hpux10-20.h (_FILE_OFFSET_BITS): Don't #undef.
+	This #undef was "temporary" in 2000; it is no longer needed
+	now that '#define static' has gone away.
+	* xfns.c, xterm.h (gray_bitmap_width, gray_bitmap_height)
+	(gray_bitmap_bits): Remove; no longer needed.
+	All uses replaced with definiens.
+	* xterm.c: Include "bitmaps/gray.xbm".
+
 2012-05-30  Paul Eggert  <eggert@cs.ucla.edu>
 
 	Clean up __executable_start, monstartup when --enable-profiling.
