--- a/etc/NEWS
+++ b/etc/NEWS
@@ -60,11 +60,15 @@ name, group names known to the system (where possible).
 ** ImageMagick support, if available, is automatically enabled.
 It is no longer necessary to call `imagemagick-register-types'
 explicitly to install ImageMagick image types; that function is called
-automatically at startup or when customizing `imagemagick-types-inhibit'.
+automatically at startup, or when customizing imagemagick-types-enable
+or imagemagick-types-inhibit.
 
 *** Setting `imagemagick-types-inhibit' to t now disables the use of
 ImageMagick to view images.  You must call imagemagick-register-types
 afterwards if you do not use customize to change this.
+
+*** The new variable `imagemagick-types-enable' also affects which
+ImageMagick types are treated as images.
 
 ** String values for `initial-buffer-choice' also apply to emacsclient
 frames, if emacsclient is only told to open a new frame without
