--- a/etc/ChangeLog
+++ b/etc/ChangeLog
@@ -1,3 +1,7 @@
+2012-06-01  Andrew Beals  <andrew.beals@gmail.com>  (tiny change)
+
+	* spook.lines: Additions.  (Bug#11598)
+
 2012-05-31  Paul Eggert  <eggert@cs.ucla.edu>
 
 	* PROBLEMS: Remove obsolete '#define static' cruft.
