--- a/doc/lispintro/ChangeLog
+++ b/doc/lispintro/ChangeLog
@@ -1,3 +1,7 @@
+2012-06-01  Chong Yidong  <cyd@gnu.org>
+
+	* Version 24.1 released.
+
 2012-05-04  Glenn Morris  <rgm@gnu.org>
 
 	* emacs-lisp-intro.texi (Making Errors): Don't mention Emacs 20.
