--- a/doc/man/ChangeLog
+++ b/doc/man/ChangeLog
@@ -1,3 +1,7 @@
+2012-06-01  Chong Yidong  <cyd@gnu.org>
+
+	* Version 24.1 released.
+
 2011-11-16  Juanma Barranquero  <lekktu@gmail.com>
 
 	* etags.1: Fix typo.
