--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2012-06-01  Chong Yidong  <cyd@gnu.org>
+
+	* Version 24.1 released.
+
 2012-05-05  Andreas Schwab  <schwab@linux-m68k.org>
 
 	* configure.in: Fix last change.
