--- a/admin/ChangeLog
+++ b/admin/ChangeLog
@@ -1,3 +1,7 @@
+2012-06-01  Chong Yidong  <cyd@gnu.org>
+
+	* Version 24.1 released.
+
 2012-02-16  Kenichi Handa  <handa@m17n.org>
 
 	* unidata/unidata-gen.el (unidata-prop-alist): Change the default
