--- a/doc/emacs/ChangeLog
+++ b/doc/emacs/ChangeLog
@@ -1,3 +1,7 @@
+2012-06-01  Chong Yidong  <cyd@gnu.org>
+
+	* Version 24.1 released.
+
 2012-05-06  Chong Yidong  <cyd@gnu.org>
 
 	* frames.texi (Mouse References, Mouse Commands): Fix index
