--- a/etc/ChangeLog
+++ b/etc/ChangeLog
@@ -1,3 +1,7 @@
+2012-06-01  Chong Yidong  <cyd@gnu.org>
+
+	* Version 24.1 released.
+
 2012-04-26  Jambunathan K  <kjambunathan@gmail.com>
 
 	* org/OrgOdtStyles.xml (OrgDescriptionList): Modify style.  With
