--- a/lisp/mh-e/ChangeLog
+++ b/lisp/mh-e/ChangeLog
@@ -1,3 +1,7 @@
+2012-06-01  Chong Yidong  <cyd@gnu.org>
+
+	* Version 24.1 released.
+
 2011-11-20  Bill Wohler  <wohler@newt.com>
 
 	* Release MH-E version 8.3.1.
