--- a/nt/ChangeLog
+++ b/nt/ChangeLog
@@ -1,3 +1,7 @@
+2012-06-01  Chong Yidong  <cyd@gnu.org>
+
+	* Version 24.1 released.
+
 2012-05-29  Eli Zaretskii  <eliz@gnu.org>
 
 	* nmake.defs (MWINDOWS): Define as
