--- a/test/ChangeLog
+++ b/test/ChangeLog
@@ -1,3 +1,7 @@
+2012-06-01  Chong Yidong  <cyd@gnu.org>
+
+	* Version 24.1 released.
+
 2012-02-13  Teodor Zlatanov  <tzz@lifelogs.com>
 
 	* automated/url-future-tests.el (url-future-tests): Move from
